<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/primary_background_color"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_regular_2x"
        android:text="@string/lbl_cancel"
        android:textColor="@color/blue"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCheck"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:src="@drawable/ic_baseline_check_black_24"
        android:tint="@color/blue" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etShelfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_below="@id/tvCancel"
        android:hint="Shelf Name"
        android:textSize="@dimen/text_heading_1x" />

</RelativeLayout>