<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color"
    tools:context=".fragments.YourShelveFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShelves"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_medium" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCreateNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:background="@drawable/ic_creat_new_background"
        android:drawableLeft="@drawable/ic_baseline_create_black_24"
        android:drawablePadding="@dimen/margin_medium"
        android:drawableTint="@color/white"
        android:padding="@dimen/margin_card_medium_2"
        android:text="Create New"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x" />



</RelativeLayout>