<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/lbl_home"
        android:icon="@drawable/ic_baseline_home_black_24"/>
    <item
        android:id="@+id/action_library"
        android:title="@string/lbl_library"
        android:icon="@drawable/ic_baseline_library_books_black_24"/>

</menu>