<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color"
    tools:context=".activities.SearchBookActivity">


    <LinearLayout
        android:layout_marginTop="@dimen/margin_medium_2"
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivSearchBack"
        android:layout_width="@dimen/margin_xlarge"
        android:layout_height="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_medium"
        android:src="@drawable/ic_baseline_arrow_back_black_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutShelfName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:hintAnimationEnabled="false"
        android:background="@color/primary_background_color"
        android:layout_marginEnd="@dimen/margin_medium"
        app:hintEnabled="false"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/blue">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtBookSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/lbl_search_book"
            android:paddingTop="14dp"
            android:textSize="@dimen/text_regular_2x"
            android:backgroundTint="@color/primary_background_color"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:maxLines="1"
            android:singleLine="true"
            />


    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchBook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutSearch"
        android:layout_marginTop="@dimen/margin_medium_2"
        tools:itemCount="15" />

</RelativeLayout>