...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_background_color"
        android:outlineProvider="none">

        <FrameLayout
            android:id="@+id/flSearchBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_small"
...
